<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_ArtikelParameter" Id="{b8416bcf-fb6e-4be3-b470-1395988936f9}">
    <Declaration><![CDATA[TYPE ST_ArtikelParameter :
STRUCT
	//Prüfling
	sArtikel:						STRING; // Vorwahl
	sFullArtikelNr:					STRING;
	sBezeichung:					STRING; // Vorwahl
	sAuftragsNr:					STRING;
	eTyp:							Artikeltyp;

	nAuftragsMenge:					UINT;
	
	fMinLaengeBolzen:				REAL;
	fMaxLaengeBolzen:				REAL;
	
	fMinLaengeGesamt:				REAL;
	fMaxLaengeGesamt:				REAL;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>