<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_Stueckzaehler" Id="{441f4b4b-dd22-4f3e-86d3-1b25fbf0b0cb}">
    <Declaration><![CDATA[TYPE ST_Stueckzaehler :
STRUCT
	nGutteileTag:		UINT;
	nGutteileGesamt:	UDINT;
	nGutteileAuftrag:	UINT;
	
	nAusschussTag:		UINT;
	nAusschussGesamt:	UDINT;
	nAusschussAuftrag:	UINT;
	
	nAuftragszaehler:	UINT;
	nGesamt:			UDINT;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>